# discovery

./: .gitignore  CMakeLists.txt  README.md
common/: buffer.cpp  buffer.h  gzip.cpp  gzip.h  json.cpp  json.h  log.cpp  log.h  threadonce.h  utils.cpp  utils.h
example/: demo.cpp
http/: Makefile  connectionpool.cpp  connectionpool.h  http.cpp  http.h  main  test.cpp  url.cpp  url.h
http/events/: epoll.cpp
http/unitest/: Makefile  test.cpp
msq/: msq.c  msq.h
msq/driver/: posix.c  sysv.c
msq/unitest/: Makefile  test.c
serializer/MD5/: md5.c  md5.h
serializer/MD5/unitest/: test.c
serializer/cJSON/: Makefile  README.md  test2.c
storage/: storage.c  storage.h  zend_accelerator_debug.c  zend_shared_alloc.c  zend_shared_alloc.h
storage/allocator/: allocator.c  allocator.h  shared_alloc_mmap.c  shared_alloc_posix.c  shared_alloc_shm.c
storage/allocator/alloc/: mmap.c  posix.c  shm.c
storage/unitest/: Makefile  test.c
test/: main.c  main.cpp
vintage/: config.c  config.h  configservice.cpp  configservice.h  naming.c  naming.h  namingservice.cpp  namingservice.h  vintage.cpp  vintage.h
